2003-12-27  Mo DeJong  <mdejong@users.sourceforge.net>

	* win/tkWinMenu.c (DrawMenuEntryAccelerator,
	DrawMenuEntryArrow): Move the unused menu
	arrow drawing code in DrawMenuEntryAccelerator
	into a new function named DrawMenuEntryArrow.
	This makes no functional change but it will
	make it easier to fix things in the future.

2003-12-27  Mo DeJong  <mdejong@users.sourceforge.net>

	* win/tkWinMenu.c (DrawWindowsSystemBitmap):
	Fix a strange Win32 bug where the logical
	coordinates returned by a call to DPtoLP
	are wrong the first time a menu is posted.
	This bug manifested itself by drawing the
	bitmap in the wrong place in a menu.
	The fix was to pass the newly created DC
	instead of the DC from the window.
	[SN Bug 814335]

2003-12-27  Mo DeJong  <mdejong@users.sourceforge.net>

	* win/tkWinMenu.c (TkWinHandleMenuEvent,
	RecursivelyClearActiveMenu, TkpSetWindowMenuBar,
	DrawMenuEntryBackground): Back port a couple
	of menu fixes from the Tk CVS. This patch fixes
	a problem with Win32 menus where a menu entry
	that is disabled was not being highlighted
	when the mouse is over the item. This matches
	the native Win32 behavior.

2003-12-25  Mo DeJong  <mdejong@users.sourceforge.net>

	* win/configure:
	* win/tcl.m4 (SC_ENABLE_SYMBOLS): Fix last
	update to macro, the Win32 DBGX symbol should
	be d not g.

2003-11-29  Mo DeJong  <mdejong@users.sourceforge.net>

	* unix/configure: Regen.
	* unix/tcl.m4 (SC_ENABLE_SYMBOLS):
	* win/configure: Regen.
	* win/tcl.m4 (SC_ENABLE_SYMBOLS): Update
	macro to support passing --enable-symbols=mem
	on the configure command line.

2003-09-13  Mo DeJong  <mdejong@users.sourceforge.net>

	* unix/configure: Regen.
	* unix/tcl.m4 (SC_PATH_X): Error out in the
	configure if no X11 includes can be found.

2003-08-10  Mo DeJong  <mdejong@users.sourceforge.net>

	* unix/Makefile.in: Remove evil rerun of autoconf.
	* unix/configure: Regen.
	* unix/tcl.m4: Update from Tcl to get CFLAGS
	opt fix.
	* win/configure: Regen.